[gd_scene load_steps=2 format=3 uid="uid://cq3y1rxca41cu"]

[ext_resource type="Script" path="res://Code/Input/InputMenu/input_mapping_menu.gd" id="1_8q87w"]

[node name="InputMappingMenu" type="Control"]
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
script = ExtResource("1_8q87w")
metadata/_edit_use_custom_anchors = true

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.4, 0.4, 1)
metadata/_edit_layout_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
horizontal_scroll_mode = 0
metadata/_edit_use_custom_anchors = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
offset_right = 622.08
offset_bottom = 349.92
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="NewInputPanel" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="Panel" type="ColorRect" parent="NewInputPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.145098, 0.145098, 1)
metadata/_edit_layout_mode = 1

[node name="ActionName" type="Label" parent="NewInputPanel"]
anchors_preset = -1
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.05
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="Message" type="Label" parent="NewInputPanel"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press new input"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_layout_mode = 1
